# ComputerScienceFiles

./: .gitignore  README.md
primeiro-semestre/atp-1/: README.md
primeiro-semestre/atp-1/aulas/: Exercícios_resolvidos.docx
primeiro-semestre/atp-1/lista-1/: README.md  ex1.c  ex2.c  ex3.c  ex4  ex4.c  ex6.c
primeiro-semestre/atp-1/lista-2/: ex12.c  ex14.c  ex16.c  ex20.c  ex22.c  ex23.c  ex27.c  ex28.c  ex29.c  ex30.c  ex31.c  ex5.c  ex6.c  ex8.c  ex9.c
primeiro-semestre/atp-1/lista-3/: ex10.c  ex11.c  ex12.c  ex14.c  ex15.c  ex16.c  ex17.c  ex2.c  ex3.c  ex7.c  ex8.c
primeiro-semestre/atp-1/lista-4/: ex1.c  ex2.c  ex3.c  ex5.c
primeiro-semestre/atp-1/lista-5/: ex12.c  ex25.c  ex28.c
primeiro-semestre/calculo-1/: README.md
primeiro-semestre/fisica-1/: README.md
primeiro-semestre/intro-ciencia-comp/: README.md
primeiro-semestre/lab-atp-1/: README.md
primeiro-semestre/lab-atp-1/aula-1/: ex1.c
primeiro-semestre/lab-atp-1/aula-2/: aula2_programa1.c  aula2_programa2.c  aula2_programa3.c
primeiro-semestre/lab-atp-1/aula-3/: aula3_programa1.c  aula3_programa2.c  aula3_programa3.c
primeiro-semestre/lab-atp-1/aula-4/: aula4_programa1.c  aula4_programa2.c  aula4_programa3.c  aula4_programa4.c
primeiro-semestre/lab-atp-1/aula-5/: aula5_programa1.c  ex1.c  (+4 more)
primeiro-semestre/logica-mat/: README.md
primeiro-semestre/mat-discreta/: README.md
primeiro-semestre/metodologia-cientifica/: README.md
quarto-semestre/assembly/: notes.md
quarto-semestre/ed-2/trabalhos/bplus/: CMakeLists.txt
quarto-semestre/ed-2/trabalhos/bplus/src/: bplus.c  bplus.h  main.c  utilities.c
quarto-semestre/estatistica/: notes.md
quinto-semestre/linguagens-formais-e-automatos/: 0.md  10_1.md  11_1.md  12_1.md  1_1.md  1_2.md  2_1.md  2_2.md  3_1.md  3_2.md  4_1.md  5_1.md  5_2.md  6_1.md  7_1.md  8_1.md  9_1.md  9_2.md
segundo-semestre/atp-2/: README.md
segundo-semestre/calculo-2/: README.md
segundo-semestre/circuitos/: README.md
segundo-semestre/fisica-2/: README.md
segundo-semestre/gav/: README.md
segundo-semestre/lab-atp-2/: README.md  ex1.c  ex2.c  ex3.c  main.c
segundo-semestre/lab-circuitos/: README.md
sexto-semestre/cg/: CMakeLists.txt  flake.nix
sexto-semestre/cg/.cache/clangd/index/: display.cpp.EA51CC8B9C40E527.idx  stb_image.h.51497B619CF79EC6.idx
sexto-semestre/cg/src/: display.cpp
sexto-semestre/compiladores/: 01.md  02.md  03.md  04.md
sexto-semestre/programacao-paralela-e-distribuida/: CMakeLists.txt  flake.nix
sexto-semestre/programacao-paralela-e-distribuida/.cache/clangd/index/: integral.c.BD246C711D49AA49.idx
terceiro-semestre/alg-linear/: README.md
terceiro-semestre/arq-comp/: README.md
terceiro-semestre/calculo-3/: README.md
terceiro-semestre/lp/: README.md
terceiro-semestre/poo/: .project
(+340 files in other folders)
